--- a/cssPrincipal.css
+++ b/cssPrincipal.css
@@ -1,67 +1,122 @@
 body{
-    background-color:darkred;
+    background: url(images/wall.jpg) center top no-repeat, #0A0F13;
+    background-size:cover;
     font-family:Georgia;
 
 }
 
 body > header{
-    width: 290px;
+    width: 100%;
     height: 100px;
-    margin: auto;
-    padding-left: 60px;
-    padding-top: 20px;
+    position: absolute;
 
+    background-color: #0A0F13;
+    top: 0px;
+    left:0px;
 
-    background-color: indianred;
-    color: ivory;
-    font-family: Courrier New;
-
-    border-radius: 20px;
-    box-shadow: 2px 2px 1px black;
+    float: left;
+    clear:none;
+    
 
 
 }
+body > header > #Param > .boutonInput{
+    width: 200px;
+    height: 90px;
+    text-align: center;
+    font-size: 35px;
+    margin-right:2px;
+    
+}
+body > header > #Param{
+    padding-left: 20px;
+    position: absolute;
+    left: 20px;
+    top: 2px;
+    
+}
+body > header > #boutonOK{
+    position: absolute;
+    left: 465px;
+    top:0px;
+    
+    /*#F6E8D5 */
+    
+    background-color: #F6E8D5; /* Green */
+    border: none;
+    color: #0A0F13;
+    padding: 24px 24px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 35px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    
+    
+    
+}
+body > header > #boutonOK:hover{
+    box-shadow: 0 12px 16px 0 white,0 17px 50px white ;
+}
+#first{
+    position: absolute;
+    right: 380px;
+    width: 200px;
+    
+    
+    background-color: #F6E8D5; /* Green */
+    border: none;
+    color: #0A0F13;
+    padding: 10px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 28px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}#first:hover{
+    box-shadow: 0 12px 16px 0 white,0 17px 50px white ;
+}
+
+#second{
+    position: absolute;
+    right: 160px;
+    width: 200px;
+    
+    
+    background-color: #F6E8D5; /* Green */
+    border: none;
+    color: #0A0F13;
+    padding: 10px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 28px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}#second:hover{
+    box-shadow: 0 12px 16px 0 white,0 17px 50px white ;
+}
+body > header > #title{
+    position: absolute;
+    left: 50%;
+    width: 645px;
+    margin-left: -323px;
+}
+
+
+
 body > section#wrapper{
     margin-left: 5%;
     float: left;
     clear:none;
-}
-body > section#wrapper > article#parametrage{
-
-    width: 200px;
-    height: 150px;
-    float:left;
-
-    margin-top: 30%;
-    margin-left: 50px;
-    margin-right: 20px;
-    padding: 5px;
-
-    background-color:ivory;
-    border: dotted black 1px;
-    border-radius:5px;
-}
-
-
-body > section#wrapper > article > input.boutonInput{
-    margin-top: 5%;
-    width: 95%;
-}
-body > section > article > button#boutonOK{
-    margin-left: 40%;
-    margin-top:2%;
-}
-body > section > article > div.boutonConfig{
-    margin-top: 5%;
-    float: left;
-    clear:none;
-
-}
-body > section > article > div.boutonConfig > #first{
-    float: left;
-}
-body > section > article > div.boutonConfig > form{
-    float: right;
 }
 
 body > section > article#jeu{
@@ -73,7 +128,6 @@ body > section > article#jeu{
     margin-top: 10%;
 
 
-    background-color:ivory;
-    border: solid black 1px;
-    border-radius: 2px;
+    
 }
+
