--- a/jeu v1.5/cssPrincipal.css
+++ b/jeu v1.5/cssPrincipal.css
@@ -8,7 +8,7 @@ body{
 /* HEADER */
 body > header{
     width: 100%;
-    height: 100px;
+    height: 10%;
     position: absolute;
 
     background-color: #0A0F13;
@@ -17,95 +17,123 @@ body > header{
 
     float: left;
     clear:none;
-    
+
 
 
 }
 /* Header de gauche (non politique) */
 header > #wrapLeft{
-    width: 30%; /* ~590px */
-    height: 100%; /* 100px */
-    padding-left: 1%;
+    width: 30%; 
+    height: 100%; 
+    padding-left: 4%;
     position: absolute;
     left: 0px;
-    top: 0px;
-    
+    top: 15%;
+
+
+
 }
 body > header > #wrapLeft > .boutonInput{
-    width: 34%; /* 200px~ */
-    height: 90%;
+    width: 29.3%; 
+    height: 60%;
     text-align: center;
     font-size: 20px;
-    
+    margin-right:1%;
+
 }
 
 header > #wrapLeft > #boutonOK{
     position: absolute;
-    height:97%;
-    left: 73%;
+    height:67%;
+    width: 10%;
+    left: 70%;
     top:0px;
-    
-  
-    
+
+
+
     background-color: #F6E8D5;
     border: none;
     color: #0A0F13;
-    padding: 4% 4%;
+
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 35px;
-    
+    font-size: 25px;
+
     cursor: pointer;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
-    
-    
-    
+
+
+
 }
 header > #wrapLeft > #boutonOK:hover{
     box-shadow: 0 12px 16px 0 white,0 17px 50px white ;
 }
 
 /* TITRE */
-/* A FAIRE :
-    Lorsque la page est inférieure à 1535px
-    Soit à partir de 80px de différence, on modifie le titre pour une version redimensionnée de 25%
-*/
-header > #title{
+.Centerer
+{
+    height: 100%;
+}
+header > #Centerer > #title{
     position: absolute;
     left: 50%;
-    width: 645px;
-    margin-left: -323px;
+    top: 5%;
+    width: 33.6%;/*645px;*/
+    margin-left: -16.8%;
+
 }
+
+
 
 
 /* Header de droite (non politique) */
 header > #wrapRight{
-    width: 30%; /* ~590px */
-    height: 100%; /* 100px */
+    width: 30%; 
+    height: 100%; 
     position: absolute;
-    right: -0.7%;
-    top: 0px;
-    
+    right: 0%;
+    top: 17%;
+
+
 }
-header > #wrapRight > form > .choixBouton{
-    float: left;
-    margin-right: 1%;
-    
-    
-    width: 45%;
-    
-    
+header > #wrapRight > form > .choixBouton#first{ 
+    position: absolute;
+    right: 55%;
+    top:0px;
+
+    width: 35%;
+    height: 65%;
+
     background-color: #F6E8D5;
     border: none;
     color: #0A0F13;
-    padding: 2.2% 2.2%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 28px;
-    
+
+    font-size: 1.3em;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+}
+header > #wrapRight > form > .choixBouton#second{
+    position: absolute;
+    right: 15%;
+    top:0px;
+
+    width: 35%;
+    height: 65%;
+
+    background-color: #F6E8D5;
+    border: none;
+    color: #0A0F13;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+
+    font-size: 1.3em;
     cursor: pointer;
     -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
