--- a/jeu v2.0 FINAL/css/cssPrincipal.css
+++ b/jeu v2.0 FINAL/css/cssPrincipal.css
@@ -5,9 +5,10 @@ body{
 
 }
 
+/* HEADER */
 body > header{
     width: 100%;
-    
+    height: 10%;
     position: absolute;
 
     background-color: #0A0F13;
@@ -16,115 +17,141 @@ body > header{
 
     float: left;
     clear:none;
-    
+
 
 
 }
-body > header > #Param > .boutonInput{
-   margin-left: 3%;
-    
+/* Header de gauche (non politique) */
+header > #wrapLeft{
+    width: 30%; 
+    height: 100%; 
+    padding-left: 4%;
+    position: absolute;
+    left: 0px;
+    top: 15%;
+
+
+
+}
+body > header > #wrapLeft > .boutonInput{
+    width: 29.3%; 
+    height: 60%;
     text-align: center;
-    font-size: 1.1em;
-    width: 90px;
-    margin-right:2px;
-    
+    font-size: 20px;
+    margin-right:1%;
+
 }
-body > header > #Param{
-    display : inline-flex;
-    padding-left: 3%;
+
+header > #wrapLeft > #boutonOK{
     position: absolute;
-    left: 1%;
-    top: 30px;
-    
-}
-#boutonOK{
-    position: absolute;
-    left: 114%;
-    top: -10%;
-    height: 96%;
-    /*#F6E8D5 */
-    
-    background-color: #F6E8D5; /* Green */
+    height:67%;
+    width: 10%;
+    left: 70%;
+    top:0px;
+
+
+
+    background-color: #F6E8D5;
     border: none;
     color: #0A0F13;
-    padding: 5px 5px;
+
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 1.1em;
-    margin: 4px 2px;
+    font-size: 25px;
+
     cursor: pointer;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
-    
-    
-    
+
+
+
 }
- #boutonOK:hover{
+header > #wrapLeft > #boutonOK:hover{
     box-shadow: 0 12px 16px 0 white,0 17px 50px white ;
 }
-#first{
+
+/* TITRE */
+.Centerer
+{
+    height: 100%;
+}
+header > #Centerer > #title{
     position: absolute;
-    right: 20%;
-    width: 12%;
-  
-    
-    
-    background-color:  #F6E8D5; /* Green */
+    left: 50%;
+    top: 5%;
+    width: 33.6%;/*645px;*/
+    margin-left: -16.8%;
+
+}
+
+
+
+
+/* Header de droite (non politique) */
+header > #wrapRight{
+    width: 30%; 
+    height: 100%; 
+    position: absolute;
+    right: 0%;
+    top: 17%;
+
+
+}
+header > #wrapRight > form > .choixBouton#first{ 
+    position: absolute;
+    right: 55%;
+    top:0px;
+
+    width: 35%;
+    height: 65%;
+
+    background-color: #F6E8D5;
     border: none;
     color: #0A0F13;
-    padding: 0.1% 0.1%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 1.1em;
-    margin: 1.8% 2%;
-    cursor: pointer;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-}#first:hover{
-    box-shadow: 0 12px 16px 0 white,0 17px 50px white ;
-}
 
-#second{
+    font-size: 1.3em;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+}
+header > #wrapRight > form > .choixBouton#second{
     position: absolute;
-     right: 5%;
-    width: 12%;
-    
-    
-   background-color:  #F6E8D5; /* Green */
+    right: 15%;
+    top:0px;
+
+    width: 35%;
+    height: 65%;
+
+    background-color: #F6E8D5;
     border: none;
     color: #0A0F13;
-    padding: 0.1% 0.1%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 1.1em;
-   margin: 1.8% 2%;
+
+    font-size: 1.3em;
     cursor: pointer;
-    -webkit-transition-duration: 0.4s; /* Safari */
+    -webkit-transition-duration: 0.4s;
     transition-duration: 0.4s;
-}#second:hover{
+}
+header > #wrapRight > form > .choixBouton:hover{
     box-shadow: 0 12px 16px 0 white,0 17px 50px white ;
 }
-body > header > #title{
-    position: absolute;
-    left: 32%;
-    top: 10px;
-    width: 30%;
-    height:65px;
-   
-}
 
 
 
-body > section#wrapper{
+/* JEU */
+body > section#gameWrapper{
+    position:absolute;
     
-  
-    clear:none;
+    height: 40%; /* Vertical */
+    top:25%;    /* Vertical */
+    
+    width: 99%; /* Horizontal */
+    margin:auto;/* Horizontal */
+    
 }
-
-
-/*
-
-*/
